apps/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-info
  labels:
    istio.io/rev: asm-managed
