apps/bookinfo/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rollouts-demo-gateway
  namespace: asm-gateways
spec:
  selector:
    asm: ingressgateway-xlb
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: edge2mesh-credential
